# dsalgorithms-c

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md
.github/workflows/: deb.yml  docs.yml  test.yml
debian/: changelog  control  copyright  libdsalgorithms-c-dev.install  libdsalgorithms-c0.install  rules
docs/: README_8md.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d6ff128e62bf51b56395bb870d975029.html  dir_d6ff128e62bf51b56395bb870d975029.js  dsalgorithms-c_8c.html  dsalgorithms-c_8c.js  dsalgorithms-c_8h.html  dsalgorithms-c_8h.js  dsalgorithms-c_8h_source.html  files.html  globals.html  globals_func.html  index.html  max_8c.html  max_8c.js  max_8h.html  max_8h.js  max_8h_source.html  navtreedata.js  navtreeindex0.js
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  files_0.js  files_1.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js
examples/: CMakeLists.txt  demo.c
include/dsalgorithms-c/: dsalgorithms-c.h  max.h
scripts/git-hooks/: pre-commit
scripts/installers/: install_dsalgorithms-c_debian_amd64_arm64.sh
src/: dsalgorithms-c.c  max.c
tests/: CMakeLists.txt  test.c  test_dsalgorithms-c.c  test_max.c
